Assure that a newly created item gets selected/focused and visible

Thanks to Franz Fellner for the patch!

BUG: 291064
FIXED-IN: 4.8.4
CCMAIL: alpine.art.de@googlemail.com